--- a/Yingying/supporting files/Base.lproj/Main.storyboard
+++ b/Yingying/supporting files/Base.lproj/Main.storyboard
@@ -1327,12 +1327,23 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H6d-8G-4Ai">
+                                <rect key="frame" x="8" y="440" width="304" height="30"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="LFY-RR-P4r"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="G4H-f1-bKX" appends="YES" id="QaI-ok-KUm"/>
+                                </connections>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="KEm-2V-kna" secondAttribute="trailing" id="2jq-qG-1be"/>
                             <constraint firstItem="2jq-6J-3nY" firstAttribute="top" secondItem="ai9-au-uh1" secondAttribute="bottom" constant="10" id="3xd-MC-HYA"/>
                             <constraint firstItem="amP-mv-fz0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tjs-rN-mfd" secondAttribute="trailing" constant="10" id="488-Dy-wGR"/>
+                            <constraint firstItem="H6d-8G-4Ai" firstAttribute="centerY" secondItem="amP-mv-fz0" secondAttribute="centerY" id="4L5-JU-OhD"/>
                             <constraint firstItem="tjs-rN-mfd" firstAttribute="centerY" secondItem="Pwv-U7-Jpl" secondAttribute="centerY" id="5gp-CB-vCG"/>
                             <constraint firstItem="2jq-6J-3nY" firstAttribute="leading" secondItem="Mkd-lF-fi7" secondAttribute="leading" constant="10" id="7M7-S7-WvD"/>
                             <constraint firstItem="dgo-GZ-Fje" firstAttribute="top" secondItem="QZk-D4-Q56" secondAttribute="bottom" constant="5" id="AWE-rK-7h8"/>
@@ -1346,6 +1357,7 @@
                             <constraint firstAttribute="trailing" secondItem="OmR-S7-cbx" secondAttribute="trailing" constant="10" id="Lgo-Rm-9a4"/>
                             <constraint firstItem="tjs-rN-mfd" firstAttribute="leading" secondItem="Pwv-U7-Jpl" secondAttribute="trailing" constant="13" id="Nwi-aZ-8Oi"/>
                             <constraint firstItem="a4v-1z-d7D" firstAttribute="leading" secondItem="AYc-Jk-mvo" secondAttribute="leading" constant="10" id="PIJ-JK-HhB"/>
+                            <constraint firstItem="H6d-8G-4Ai" firstAttribute="leading" secondItem="Mkd-lF-fi7" secondAttribute="leading" constant="8" id="Ql8-2L-sae"/>
                             <constraint firstAttribute="trailing" secondItem="amP-mv-fz0" secondAttribute="trailing" constant="10" id="RYf-RM-evJ"/>
                             <constraint firstItem="OmR-S7-cbx" firstAttribute="top" secondItem="eiG-3I-2O9" secondAttribute="bottom" constant="10" id="TPt-Es-EMO"/>
                             <constraint firstItem="QZk-D4-Q56" firstAttribute="leading" secondItem="Mkd-lF-fi7" secondAttribute="leading" constant="10" id="ZFB-Fk-AJ4"/>
@@ -1360,6 +1372,7 @@
                             <constraint firstItem="kcG-y8-jSS" firstAttribute="top" secondItem="2jq-6J-3nY" secondAttribute="bottom" constant="5" id="sCz-LR-ecp"/>
                             <constraint firstItem="kcG-y8-jSS" firstAttribute="leading" secondItem="Mkd-lF-fi7" secondAttribute="leading" constant="10" id="uu0-uI-5rN"/>
                             <constraint firstItem="AYc-Jk-mvo" firstAttribute="leading" secondItem="Mkd-lF-fi7" secondAttribute="leading" constant="10" id="uvh-hu-Uqi"/>
+                            <constraint firstAttribute="trailing" secondItem="H6d-8G-4Ai" secondAttribute="trailing" constant="8" id="vB0-a1-knG"/>
                             <constraint firstItem="NPW-1b-zjL" firstAttribute="leading" secondItem="QZk-D4-Q56" secondAttribute="trailing" constant="10" id="x6y-8y-ROA"/>
                             <constraint firstAttribute="trailing" secondItem="kcG-y8-jSS" secondAttribute="trailing" constant="10" id="zAh-QQ-COz"/>
                         </constraints>
@@ -1378,9 +1391,15 @@
                         <outlet property="myPlaceholderLabel" destination="a4v-1z-d7D" id="VTb-bk-af5"/>
                         <outlet property="myPriceTextField" destination="QZk-D4-Q56" id="fDm-4W-4vb"/>
                         <outlet property="myResDesc" destination="AYc-Jk-mvo" id="zw2-H1-5bc"/>
+                        <outlet property="myTabBackView" destination="H6d-8G-4Ai" id="Ibe-HP-Nyj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hSu-hM-NeD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="G4H-f1-bKX">
+                    <connections>
+                        <action selector="onAddress:" destination="tZs-Yu-zE7" id="WHh-hU-p1S"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="728" y="-3304"/>
         </scene>
@@ -2131,6 +2150,16 @@
                                     <outlet property="delegate" destination="Vxo-Yb-ex5" id="x3R-o2-BeZ"/>
                                 </connections>
                             </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pqH-FR-UsK">
+                                <rect key="frame" x="8" y="326" width="304" height="30"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Inc-cO-Qrc"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="FfW-6Q-8Ic" appends="YES" id="roB-Kc-Ddj"/>
+                                </connections>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -2141,10 +2170,12 @@
                             <constraint firstItem="u4N-wZ-4gb" firstAttribute="centerY" secondItem="c8f-g8-t0h" secondAttribute="centerY" id="8Z6-xL-dY2"/>
                             <constraint firstItem="f2g-ql-jB4" firstAttribute="top" secondItem="tmE-J7-I7r" secondAttribute="bottom" constant="5" id="DO2-Vs-qrM"/>
                             <constraint firstAttribute="trailing" secondItem="TOb-co-Vbt" secondAttribute="trailing" id="Dkg-fp-jMq"/>
+                            <constraint firstAttribute="trailing" secondItem="pqH-FR-UsK" secondAttribute="trailing" constant="8" id="GYI-jG-m27"/>
                             <constraint firstItem="haJ-gi-fVI" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" id="In5-5C-TZa"/>
                             <constraint firstItem="u4N-wZ-4gb" firstAttribute="centerY" secondItem="rFr-FJ-A5K" secondAttribute="centerY" id="KPM-h9-GA7"/>
                             <constraint firstAttribute="trailing" secondItem="f2g-ql-jB4" secondAttribute="trailing" constant="5" id="KgJ-JE-Yrj"/>
                             <constraint firstItem="IBa-uc-6XM" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" constant="10" id="Mid-kH-MEX"/>
+                            <constraint firstItem="pqH-FR-UsK" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" constant="8" id="OTp-GJ-IcH"/>
                             <constraint firstAttribute="trailing" secondItem="rFr-FJ-A5K" secondAttribute="trailing" constant="15" id="UbY-1f-8N4"/>
                             <constraint firstAttribute="trailing" secondItem="IBa-uc-6XM" secondAttribute="trailing" constant="10" id="YRT-tA-QBf"/>
                             <constraint firstAttribute="trailing" secondItem="haJ-gi-fVI" secondAttribute="trailing" id="YW3-xm-qyc"/>
@@ -2155,6 +2186,7 @@
                             <constraint firstAttribute="trailing" secondItem="yKW-ET-YFR" secondAttribute="trailing" constant="10" id="mcL-6q-fJA"/>
                             <constraint firstItem="rFr-FJ-A5K" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="u4N-wZ-4gb" secondAttribute="trailing" constant="10" id="ok2-3U-Nwl"/>
                             <constraint firstItem="yKW-ET-YFR" firstAttribute="leading" secondItem="vGT-Ly-Hbe" secondAttribute="leading" constant="10" id="ozB-mx-e2M"/>
+                            <constraint firstItem="pqH-FR-UsK" firstAttribute="centerY" secondItem="rFr-FJ-A5K" secondAttribute="centerY" id="quR-cb-D7y"/>
                             <constraint firstItem="TOb-co-Vbt" firstAttribute="top" secondItem="tmE-J7-I7r" secondAttribute="bottom" constant="5" id="rNn-oV-cri"/>
                             <constraint firstItem="c8f-g8-t0h" firstAttribute="top" secondItem="IBa-uc-6XM" secondAttribute="bottom" constant="10" id="rcv-uj-m9Q"/>
                         </constraints>
@@ -2172,9 +2204,15 @@
                         <outlet property="myImages" destination="yKW-ET-YFR" id="gGB-wC-v4e"/>
                         <outlet property="myMoodContentTextView" destination="f2g-ql-jB4" id="dVz-GW-WHH"/>
                         <outlet property="myPlaceholderLabel" destination="ALC-vR-Rst" id="Qk6-aX-XMi"/>
+                        <outlet property="myTapBackView" destination="pqH-FR-UsK" id="BRx-eM-cgE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GWZ-ch-1pM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="FfW-6Q-8Ic">
+                    <connections>
+                        <action selector="onAddress:" destination="Vxo-Yb-ex5" id="L5d-YU-nqs"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="728" y="-3936"/>
         </scene>
@@ -4038,7 +4076,7 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z0R-u6-gCd">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="finance_avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="7rG-mN-QCU">
+                                                <imageView userInteractionEnabled="NO" tag="20" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="finance_avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="7rG-mN-QCU">
                                                     <rect key="frame" x="15" y="10" width="30" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="9XU-43-zqJ"/>
@@ -4930,7 +4968,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="退出登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkk-bs-i4m">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="退出登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkk-bs-i4m">
                                             <rect key="frame" x="128" y="16" width="64" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.98039215690000003" green="0.34901960780000002" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
