过年前的版本

--- a/Yingying/supporting files/Base.lproj/Main.storyboard
+++ b/Yingying/supporting files/Base.lproj/Main.storyboard
@@ -1085,7 +1085,6 @@
                                                 <constraint firstAttribute="trailing" secondItem="eKw-Ul-Cvr" secondAttribute="trailing" constant="5" id="b1D-1q-VY8"/>
                                                 <constraint firstItem="bPD-9Y-WaZ" firstAttribute="leading" secondItem="abd-un-QCp" secondAttribute="leading" id="gGK-Dy-NDb"/>
                                                 <constraint firstItem="muF-tM-BO5" firstAttribute="top" secondItem="Rcy-9P-dZl" secondAttribute="top" id="h3C-CO-vey"/>
-                                                <constraint firstItem="PIu-RL-MOn" firstAttribute="top" secondItem="muF-tM-BO5" secondAttribute="bottom" constant="13" id="hqZ-Kz-e4M"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="gb6-ef-z6C" secondAttribute="trailing" id="i2b-DX-KkE"/>
                                                 <constraint firstItem="avt-iI-I0u" firstAttribute="centerY" secondItem="BUR-8r-2Na" secondAttribute="centerY" id="ir5-Px-vRO"/>
                                                 <constraint firstItem="muF-tM-BO5" firstAttribute="leading" secondItem="Rcy-9P-dZl" secondAttribute="trailing" constant="5" id="sSD-jP-EPg"/>
@@ -1093,6 +1092,7 @@
                                                 <constraint firstItem="gb6-ef-z6C" firstAttribute="top" secondItem="PIu-RL-MOn" secondAttribute="bottom" constant="6" id="uGq-XJ-O8m"/>
                                                 <constraint firstItem="avt-iI-I0u" firstAttribute="leading" secondItem="PgK-yS-Lrf" secondAttribute="trailing" constant="20" id="vds-5l-Ekw"/>
                                                 <constraint firstItem="eKw-Ul-Cvr" firstAttribute="leading" secondItem="E3o-wh-dXz" secondAttribute="trailing" constant="5" id="vez-KA-1A0"/>
+                                                <constraint firstItem="PIu-RL-MOn" firstAttribute="top" secondItem="Rcy-9P-dZl" secondAttribute="bottom" constant="1" id="xB4-R5-qEn"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -1768,6 +1768,7 @@
                                                 <constraint firstItem="CG0-dB-c5c" firstAttribute="centerY" secondItem="QMQ-fH-kOb" secondAttribute="centerY" id="Cyt-Y6-Wlx"/>
                                                 <constraint firstItem="CG0-dB-c5c" firstAttribute="leading" secondItem="obv-j6-k5y" secondAttribute="trailing" constant="20" id="D45-VQ-TJd"/>
                                                 <constraint firstItem="Hs4-Gw-b8y" firstAttribute="leading" secondItem="zrg-eX-Poa" secondAttribute="leading" constant="9" id="G79-ES-1ld"/>
+                                                <constraint firstItem="Hs4-Gw-b8y" firstAttribute="top" secondItem="cGs-mf-xH2" secondAttribute="bottom" constant="1" id="GmC-Xu-3Cn"/>
                                                 <constraint firstAttribute="trailing" secondItem="gSv-ex-Cr0" secondAttribute="trailing" id="Gzi-D9-UsB"/>
                                                 <constraint firstAttribute="trailing" secondItem="QMQ-fH-kOb" secondAttribute="trailing" constant="35" id="HFa-hT-JZ1"/>
                                                 <constraint firstItem="obv-j6-k5y" firstAttribute="leading" secondItem="okf-KL-eQa" secondAttribute="trailing" constant="5" id="IR1-X4-DqP"/>
@@ -1782,7 +1783,6 @@
                                                 <constraint firstItem="gSv-ex-Cr0" firstAttribute="leading" secondItem="zrg-eX-Poa" secondAttribute="leading" id="fmv-LA-ErO"/>
                                                 <constraint firstItem="okf-KL-eQa" firstAttribute="centerY" secondItem="obv-j6-k5y" secondAttribute="centerY" id="giY-BJ-Rje"/>
                                                 <constraint firstItem="QMQ-fH-kOb" firstAttribute="leading" secondItem="CG0-dB-c5c" secondAttribute="trailing" constant="5" id="h8x-pT-WyA"/>
-                                                <constraint firstItem="Hs4-Gw-b8y" firstAttribute="top" secondItem="Cav-Gl-Axw" secondAttribute="bottom" constant="13" id="iWn-JQ-NYm"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="pnz-b0-TTV" secondAttribute="bottom" constant="27" id="ktR-8Y-O0s"/>
                                                 <constraint firstItem="aFH-D8-EHE" firstAttribute="leading" secondItem="Ncq-8d-kUv" secondAttribute="trailing" constant="5" id="qmN-4j-YrZ"/>
                                                 <constraint firstItem="pnz-b0-TTV" firstAttribute="top" secondItem="Hs4-Gw-b8y" secondAttribute="bottom" constant="6" id="rnX-af-fzK"/>
